# CourseRecSys_CLIRS

./: .gitignore  CourseRecSys_CLIRS_slurmjob.sh  README.md  SKILLS.md  pyproject.toml  requirements.txt
CLASS/Scripts/: CourseRecEnv.py  Dataset.py  Reinforce.py  clustering.py
CLIRS/: README_DEVELOPMENT.md
CLIRS/Scripts/: CourseRecEnv.py  Dataset.py  Reinforce.py  clustering.py  load_config.py  matchings.py  (+2 more)
Config/: run.json  run.yaml  run_dqn_k2_clirs.json  run_dqn_k2_jcrec.json  run_dqn_k2_jcrecFair.json  run_dqn_k3_clirs.json  run_dqn_k3_jcrec.json  run_dqn_k3_jcrecFair.json  run_dqn_k4_clirs.json  run_dqn_k4_jcrec.json  run_dqn_k4_jcrecFair.json  run_dqn_k5_clirs.json  run_dqn_k5_jcrec.json  run_dqn_k5_jcrecFair.json  run_ppo_k2_clirs.json  run_ppo_k2_jcrec.json  run_ppo_k2_jcrecFair.json  run_ppo_k3_clirs.json  run_ppo_k3_jcrec.json  run_ppo_k3_jcrecFair.json  run_ppo_k4_clirs.json  run_ppo_k4_jcrec.json  run_ppo_k4_jcrecFair.json  run_ppo_k5_clirs.json  run_ppo_k5_jcrec.json  run_ppo_k5_jcrecFair.json
Docs/: README_DEVELOPMENT.md
EvaluationOfRLAlgs/: agg_bs.csv  agg_pbpt.csv
JCRecFair/: Reinforce.py  __init__.py  split_sync.py
Utils/: __init__.py  complete_algorithm.py  course_clusters.py  experiment_log.py  general_utils.py  hw_profile.py  parallel_trials.py  probe_runtime.py  results_paths.py  trial_sweep.py  visualize_learning_curves.py
jcrec/: Dataset.py  matchings.py
pipelines/: cross_lineage_eval.py  run_clirs_pipeline.py  run_jcrec_fair_pipeline.py  run_jcrec_pipeline.py  run_pipeline.py  sweep_eval.py
tests/: test_matchings_vectorized.py
(+2 files in other folders)
