[tool.poetry]
name = "wuir-class"
version = "0.1.0"
description = "RL course recommendation with CLASS clustering-based reward shaping"
authors = ["Binh Minh TRAN"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
stable-baselines3 = "2.2.1"
pyyaml = "6.0.1"
numpy = ">=1.21.0"
pandas = ">=1.3.0"
gymnasium = ">=0.28.0"
scikit-learn = ">=1.0.0"
matplotlib = ">=3.5.0"
seaborn = ">=0.11.0"
tqdm = ">=4.62.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
